﻿Version 4.7.0
MVC 6
- Removed bower.json, using package.json instead.
- Upgraded Bootstrap from 3.3.6 to 3.3.7.
- Upgraded Font Awesome from 4.6.3 to 4.7.0.

Version 4.6.0
MVC 5 & MVC 6
- Added item to ReadMe.html to use the Google CSP Evaluator to validate the sites CSP policy.
MVC 6
- Added a CORS feature.
- project.json publishOptions updated to use globs to copy cshtml files.
- launchSettings.json updated to add profiles to run the app using the Staging and Production environments.
- Add crossorigin="anonymous" attribute to external scripts supporting Access-Control-Allow-Origin: *.

Version 4.5.0
MVC 6
- Added 'dotnet watch' launch profile to launchSettings.json, allowing you to edit code and refresh the browser to see your changes while
  the app is running.

Version 4.4.0
MVC 6
- Added Web Server feature that lets you select which web server you want to target.
- nginx.conf added to configure the Nginx web server.
- UseRandomizedStringHashAlgorithm setting Moved from web.config to app.config.
- HttpExceptionMiddleware and InternalServerErrorOnExceptionMiddleware logs information messages.

Version 4.3.0
MVC 6
- Get the environment in gulpfile.js by reading the launchSettings.json file if an environment variable does not exist.
- Google Page Speed is now an optional feature under performance.
- Set AddServerHeader to false for the Kestrel Web Server in Program.cs.

Version 4.2.1
MVC 6
- Renamed the template in the File -> New Project window.

Version 4.2.0
MVC 6
- Updated NWebSec to the latest ASP.NET Core 1.0 Version.
- AddApplicationInsights in Startup.ConfigureServices now added fluently as it now returns IServiceCollection.

Version 4.1.0
MVC 6
- Fixed https://github.com/ASP-NET-MVC-Boilerplate/Templates/issues/108

Version 4.0.0
MVC 6
- Updated to ASP.NET Core 1.0 RTM.

Version 3.2.0
MVC 5 & 6
- Removed the X-UA-Compatible HTTP header from web.config.
MVC 6