@@ -245,12 +245,6 @@
     </article>
     <article class="col-md-4" role="article">
         <header>
-            <h2><span aria-hidden="true" class="fa fa-check"></span> Modernizr</h2>
-        </header>
-        <p><a href="http://modernizr.com/">Modernizr</a> is a JavaScript library that detects HTML5 and CSS3 features in the user's browser.</p>
-    </article>
-    <article class="col-md-4" role="article">
-        <header>
             <h2><span aria-hidden="true" class="fa fa-lock"></span> NWebsec</h2>
         </header>
         <p><a href="https://github.com/NWebsec/NWebsec">NWebsec</a> makes securing your ASP.NET MVC site easy with a handful of simple attributes you can add to your global filters, controllers or actions.</p>
