@@ -139,12 +139,6 @@
     @* Do not move this file to a CDN. See https://github.com/Microsoft/ApplicationInsights-aspnet5/issues/120 *@
     <script asp-append-version="true" src="~/js/application-insights.js"></script>
     @* $End-ApplicationInsights$ *@
-    <environment names="@EnvironmentName.Development">
-        <script asp-append-version="true" src="~/js/modernizr.js"></script>
-    </environment>
-    <environment names="@EnvironmentName.Staging,@EnvironmentName.Production">
-        <script src="@ContentDeliveryNetwork.Microsoft.ModernizrUrl"></script>
-    </environment>
 
 
     @* Description - Used by search engines. Aim for more than 160 characters. *@
